Classmethod and staticmethod built-ins are empty

--- a/2016-09-13-python-built-in-functions.org
+++ b/2016-09-13-python-built-in-functions.org
@@ -397,6 +397,8 @@ tags: [built-in functions, unittest]
               self.assertEqual(chr(105), 'i')
     #+END_SRC
 
+*** classmethod() and staticmethod()
+
 
 ** Test runner
    Accustomed unittest as Python module:
