Compile built-in function empty template

--- a/2016-09-13-python-built-in-functions.org
+++ b/2016-09-13-python-built-in-functions.org
@@ -399,6 +399,11 @@ tags: [built-in functions, unittest]
 
 *** classmethod() and staticmethod()
 
+*** compile()
+    #+NAME: compile-test-suite
+    #+BEGIN_SRC python
+    
+    #+END_SRC
 
 ** Test runner
    Accustomed unittest as Python module:
