Complex built-in test suite

--- a/2016-09-13-python-built-in-functions.org
+++ b/2016-09-13-python-built-in-functions.org
@@ -405,6 +405,19 @@ tags: [built-in functions, unittest]
     
     #+END_SRC
 
+*** complex()
+    #+NAME: complex-test-suite
+    #+BEGIN_SRC python
+      class TestComplex(unittest.TestCase):
+
+          def test_summ_two_arguments(self):
+              self.assertEqual(complex(3, 3) + complex(2, 2),
+                               complex(5, 5))
+
+          def test_string_as_argument(self):
+              self.assertRaises(ValueError, lambda: complex("Alioth"))
+    #+END_SRC
+
 ** Test runner
    Accustomed unittest as Python module:
 
@@ -415,9 +428,9 @@ tags: [built-in functions, unittest]
    #+END_SRC
 
    #+RESULTS:
-   : ..............................................
+   : ................................................
    : ----------------------------------------------------------------------
-   : Ran 46 tests in 0.007s
+   : Ran 48 tests in 0.005s
    : 
    : OK
 
