--- a/2016-09-13-python-built-in-functions.org
+++ b/2016-09-13-python-built-in-functions.org
@@ -433,7 +433,27 @@ tags: [built-in functions, unittest]
 *** delattr()
     #+NAME: delattr-test-suite
     #+BEGIN_SRC python
-    
+      class TestDelattr(unittest.TestCase):
+
+          def setUp(self):
+              """Create a mockup object for testing purposes"""
+              class Pear():
+                  def __init__(self):
+                      self.size = 123
+                      self.color = 'green'
+
+              self.obj = Pear()
+
+          def test_all_obj_attributes(self):
+              self.assertTrue(self.obj.size and self.obj.color)
+
+          def test_del_existing_attribute(self):
+              self.assertIsNone(delattr(self.obj, 'size'))
+              self.assertRaises(AttributeError, lambda: self.obj.size)
+
+          def test_del_non_existing_attribute(self):
+              self.assertRaises(AttributeError,
+                                lambda: delattr(self.obj, 'shape'))
     #+END_SRC
 
 *** dict()
@@ -465,9 +485,9 @@ tags: [built-in functions, unittest]
    #+END_SRC
 
    #+RESULTS:
-   : ................................................
+   : ...................................................
    : ----------------------------------------------------------------------
-   : Ran 48 tests in 0.005s
+   : Ran 51 tests in 0.005s
    : 
    : OK
 
