--- a/2016-09-13-python-built-in-functions.org
+++ b/2016-09-13-python-built-in-functions.org
@@ -459,7 +459,30 @@ tags: [built-in functions, unittest]
 *** dict()
     #+NAME: dict-test-suite
     #+BEGIN_SRC python
-    
+      class TestDict(unittest.TestCase):
+
+          def setUp(self):
+              """Create a mockup object for testing purposes"""
+              class Pear():
+                  def __init__(self):
+                      self.size = 123
+                      self.color = 'green'
+
+              self.obj = Pear()
+              self.mock_dict = dict(a=1, b=2)
+
+          def test_all_dict_attributes(self):
+              self.assertTrue(self.mock_dict["a"] == 1)
+              self.assertTrue(self.mock_dict["b"] == 2)
+
+          # def test_mapping_obj(self):
+          #     #
+          #     self.assertTrue(dict(self.obj))
+          #     # self.assertRaises(AttributeError, lambda: self.obj.size)
+
+          # def test_del_non_existing_attribute(self):
+          #     self.assertRaises(AttributeError,
+          #                       lambda: delattr(self.obj, 'shape'))
     #+END_SRC
 
 *** dir()
@@ -485,9 +508,9 @@ tags: [built-in functions, unittest]
    #+END_SRC
 
    #+RESULTS:
-   : ...................................................
+   : ....................................................
    : ----------------------------------------------------------------------
-   : Ran 51 tests in 0.005s
+   : Ran 52 tests in 0.006s
    : 
    : OK
 
