Dir built-in function test suite

--- a/2016-09-13-python-built-in-functions.org
+++ b/2016-09-13-python-built-in-functions.org
@@ -484,6 +484,20 @@ tags: [built-in functions, unittest]
 *** dir()
     #+NAME: dir-test-suite
     #+BEGIN_SRC python
+      class TestDir(unittest.TestCase):
+
+          def setUp(self):
+              """Create a mockup object for testing purposes"""
+              class Pear():
+                  def __init__(self):
+                      self.size = 123
+                      self.color = 'green'
+
+              self.obj = Pear()
+
+          def test_existing_attr(self):
+              self.assertTrue(dir(self.obj)[-1] == 'size' and
+                              dir(self.obj)[-2] == 'color')
     #+END_SRC
 
 *** divmod()
