--- a/2016-09-13-python-built-in-functions.org
+++ b/2016-09-13-python-built-in-functions.org
@@ -503,7 +503,13 @@ tags: [built-in functions, unittest]
 *** divmod()
     #+NAME: divmod-test-suite
     #+BEGIN_SRC python
-    
+      class TestDivmod(unittest.TestCase):
+
+          def test_simple_division(self):
+              self.assertTrue(divmod(5, 3) == (1, 2))
+
+          def test_complex_division(self):
+              self.assertTrue(divmod(10, 3) == (3, 1))
     #+END_SRC
 
 
@@ -517,9 +523,9 @@ tags: [built-in functions, unittest]
    #+END_SRC
 
    #+RESULTS:
-   : ....................................................
+   : .......................................................
    : ----------------------------------------------------------------------
-   : Ran 52 tests in 0.006s
+   : Ran 55 tests in 0.006s
    : 
    : OK
 
