Enumerate() built-in function test suite

--- a/2016-09-13-python-built-in-functions.org
+++ b/2016-09-13-python-built-in-functions.org
@@ -671,7 +671,18 @@ tags: [built-in functions, unittest]
 *** enumerate()
     #+NAME: enumerate-test-suite
     #+BEGIN_SRC python
-    
+      class TestEnumerate(unittest.TestCase):
+
+          def test_enumerate_zero_list(self):
+              """function returns an iterator"""
+              alist = [0, 1, 2]
+              for i, j in enumerate(alist):
+                  self.assertEqual(i, j)
+
+          def test_enumerate_arbitrary_list(self):
+              alist = [2, 3, 4]
+              for i, j in enumerate(alist, 2):
+                  self.assertEqual(i, j)
     #+END_SRC
 
 *** eval()
@@ -985,9 +996,9 @@ tags: [built-in functions, unittest]
    #+END_SRC
 
    #+RESULTS:
-   : .......................................................
+   : .........................................................
    : ----------------------------------------------------------------------
-   : Ran 55 tests in 0.006s
+   : Ran 57 tests in 0.006s
    : 
    : OK
 
